Make DummyPageProvider somewhat thread safe